--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Mapa dinámico con geolocalización</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Ejercicio11.5.css" rel="stylesheet" />
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8aUp4J8B-MOmk6mg4A8cSsbE3qzEpB1g&callback=mapaDinamicoGoogle.initMap">
